base/engine/Nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: kraftnetes-engine-nodeport
  namespace: kraftnetes
spec:
  selector:
    app: kraftnetes-engine
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30001
  type: NodePort
