base/engine/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kraftnetes-internal-engine-service
  namespace: kraftnetes
spec:
  selector:
    app: kraftnetes-engine
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
